tests/core/ill-typed/unexpected-type-for-expression/bad-abstraction.stella
language core;

fn badAbstraction(n : Nat) -> fn(Nat) -> Nat {
    return fn(a : Nat) {
        return Nat::iszero(succ(a));
    };
}

fn main(n : Nat) -> Nat {
  return badAbstraction(n);
}